<resources>
    <string name="app_name">AntySmogApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Strona główna</string>
    <string name="menu_history">Historia</string>
    <string name="menu_notification">Powiadomienia</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="coordinates_home">Twoje współrzędne to:</string>
    <string name="address_home">Jesteś w pobliżu:</string>
    <string name="air_quality_title">Aktualna jakość powietrza:</string>
    <string name="textHistory">Data:</string>
    <string name="textPM1">Stężenie PM1:</string>
    <string name="textPM25">Stężenie PM2.5:</string>
    <string name="textPM10">Stężenie PM10:</string>
    <string name="textPressure">Ciśnienie:</string>
    <string name="textHumidity">Wilgotność:</string>
    <string name="textTemp">Temperatura:</string>
    <string name="no_data">b/d</string>
    <string name="PM1">Stężenie PM1</string>
    <string name="PM25">Stężenie PM2.5</string>
    <string name="PM10">Stężenie PM10</string>
    <string name="pressure">Ciśnienie</string>
    <string name="humidity">Wilgotność</string>
    <string name="temperature">Temperatura</string>
    <string name="question_notification">Czy chcesz otrzymywać powiadomienia o złej jakości powietrza?</string>
    <string name="notification_value">Wpisz wartość w % dla jakiej chcesz otrzymać powiadomienie</string>
    <string name="notification_description">0% = najlepsze powietrze 100% = najgorsze powietrze</string>
    <string name="home_city">Wpisz nazwę miejscowości</string>
    <string name="home_ad" >Jeśli chcesz to możesz sprawdzić jakość powietrza w innym miejscu!</string>
    <string name="home_location_show">Wyświetlanie dla twojej lokalizacji</string>
    <string name="home_location_show_selected">Wyświetlanie dla wybranej lokalizacji</string>
</resources>
